# django-ai-core

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  pytest.ini  testmanage.py  tox.ini
.github/workflows/: test.yml
docs/: .nav.yml  index.md
docs/guides/: django-model-semantic-search.md
docs/modules/: core.md
docs/modules/agents/: index.md  permissions.md
docs/modules/index/: .nav.yml  chunk_transformers.md  components.md  developer.md  index.md
docs/modules/index/storage_providers/: pgvector.md  s3vectors.md
src/django_ai_core/: __init__.py  apps.py
src/django_ai_core/.github/workflows/: test.yml
src/django_ai_core/contrib/agents/: __init__.py  base.py  permissions.py  urls.py  views.py
src/django_ai_core/contrib/index/: __init__.py  apps.py  base.py  chunking.py  embedding.py  embedding_cache.py  models.py  query.py  schema.py  signals.py  source.py
src/django_ai_core/contrib/index/management/commands/: rebuild_indexes.py
src/django_ai_core/contrib/index/migrations/: 0001_initial.py
src/django_ai_core/contrib/index/storage/: __init__.py  base.py  inmemory.py  llamaindex.py  pgvector.py  pgvector_model.py  qdrant.py  s3_vectors.py  s3vectors.py
src/django_ai_core/contrib/index/storage/pgvector/: __init__.py  apps.py  models.py  provider.py
src/django_ai_core/contrib/index/storage/pgvector/migrations/: 0001_initial.py
src/django_ai_core/llm/: __init__.py  base.py  prompt.py
tests/contrib/agents/: test_agent_registry.py
tests/contrib/index/: test_index_registry.py  test_vector_index.py
tests/integration/: test_pgvector_provider.py
tests/integration/pgvector/: test_pgvector_provider.py
tests/testapp/: __init__.py  agents.py  apps.py  docker-compose.yml  indexes.py  models.py  settings.py  urls.py
tests/testapp/management/commands/: create_test_data.py
tests/testapp/migrations/: 0001_initial.py
tests/unit/contrib/agents/: test_agent_base.py  test_agent_permissions.py  test_agent_registry.py  test_agent_views.py
tests/unit/contrib/index/: test_index_registry.py  test_model_source.py  test_query_handler.py  test_storage.py  test_vector_index.py
tests/unit/llm/: test_llm_service.py  test_prompt.py
typings/queryish/: __init__.pyi
